--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,16 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link href="dist/css/react-widgets.css" rel="stylesheet"/>
+
 </head>
 <body>
     <div class="container"></div>
+    ​
+    <script src="http://fb.me/react-15.5.5.js"></script>
+    <script src="http://fb.me/react-dom-15.5.0.js"></script>
+    <script src='node_modules/react-widgets/dist/react-widgets.js'></script>
+
     <script src="/bundle.js"></script>
 </body>
 </html>
